intTests/test_type_errors/err037.log.good
Loading file "err037.saw"
Type errors:
  err037.saw:9:18-9:33: Error: Type mismatch.
    Perhaps a function was not given enough arguments?
    Expected: [Int]
    Found:    [Int] -> [Int]

  err037.saw:9:10-9:15: Note: The type [Int] arises from this type annotation
  err037.saw:7:15-7:35: Note: The type [Int] -> [Int] arises from the context of the term


FAILED
